# waqf-protocol

./: .eslintrc.json  .gitignore  ACTIVITY_LOGGING_FIX.md  ADMIN_DASHBOARD_COMPLETE.md  ADMIN_DASHBOARD_REDESIGN.md  AUDIT_COLLECTION_ANALYSIS.md  AUTHENTICATION_CHANGES.md  BUILD_SUCCESS_SUMMARY.md  CAUSES_MANAGEMENT_REDESIGN.md  CAUSE_UTILS_SUMMARY.md  COLLECTION_SETUP_ADMIN_REQUESTS.md  COLLECTION_SETUP_CHECKLIST.md  DASHBOARD_UI_ENHANCEMENTS.md  DEVELOPMENT_TESTING_GUIDE.md  HEADER_FOOTER_FIX.md  IMPROVEMENTS_SUMMARY.md  JUNO_REDUNDANCY_CLEANUP.md  JUNO_SETUP_GUIDE.md  PASSKEY_REMOVAL_SUMMARY.md  QUICK_START.md  README.md  ROLE_BASED_ROUTING.md  SESSION_SUMMARY.md  TESTING_QUICK_START.md  WARP.md  debug-admin.js  juno.config.mjs  next.config.mjs  package-lock.json  package.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: layout.tsx
src/app/auth/: page.tsx
src/app/waqf/: layout.tsx  page.tsx
src/components/: DevModeSwitcher.tsx  Header.tsx  HeroSection.tsx  junoInitializer.tsx
src/components/admin/: AddAdminForm.tsx  AdminList.tsx  (+9 more)
src/context/: AuthContext.tsx  JunoContext.tsx
src/hooks/: useAdminCheck.ts  useAuth.ts  useWaqfCreatorCheck.ts  useWaqfData.ts  useWaqfStorage.ts
src/lib/: admin-utils.ts  cause-utils.ts  health-checks.ts  juno.ts  roles.ts  utils.ts  waqf-utils.ts
src/satellite/: Cargo.toml
src/satellite/.cargo/: config.toml
src/satellite/src/: admin_hooks.rs  cause_hooks.rs  lib.rs  waqf_hooks.rs  waqf_types.rs  waqf_utils.rs
src/satellite/src/lib/: waqf_utils.rs  waqf_utils.rs.new
src/types/: passkey.ts  waqfs.ts
(+14 files in other folders)
