[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.19"
ic-cdk = "0.18.7"
ic-cdk-macros = "0.18.7"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.132"
serde_cbor = "0.11.2"
junobuild-satellite = "0.2.5"
junobuild-macros = "0.1.1"
junobuild-utils = "0.1.3"
getrandom = { version = "0.3.3", features = ["wasm_js"], default-features = false }

[build-dependencies]
junobuild-macros = "0.1.1"

